Convert to MP4 Error
.mkv files that convert properly in version 2.0.0 no longer convert in version 2.0.1 using the same process. The error says "cannot open codec"
.mkv files that convert properly in version 2.0.0 no longer convert in version 2.0.1 using the same process. The error says "cannot open codec"
added Severity::normal Type::bug + 1 deleted label
changed milestone to %Bugs paradize
added Component::Stream output: Encoders label and removed 1 deleted label
changed milestone to %2.0.2
commit 8585706f Author: Jean-Baptiste Kempf jb@videolan.org Date: Sun Apr 1 10:58:37 2012 +0200
Fix AAC encoding with ffaac
Should close [#6483](https://code.videolan.org/videolan/vlc/-/issues/6483)
Original author: jb@videolan.org
added Status::fixed label
closed
mentioned in issue #6563 (closed)
mentioned in issue #6591 (closed)
VideoLAN code repository instance