Fix AAC encoding with ffaac

Should close #6483